--- a/DiscoverGuitarOnline.user.css
+++ b/DiscoverGuitarOnline.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for http://discoverguitaronline.com/
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/DiscoverGuitarOnline.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/DiscoverGuitarOnline.user.css
 ==/UserStyle== */
 @-moz-document domain("discoverguitaronline.com") {
