--- a/HackmathDark.user.css
+++ b/HackmathDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for hackmath.net
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/HackmathDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/HackmathDark.user.css
 ==/UserStyle== */
 
