--- a/HastebinDark.user.css
+++ b/HastebinDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for hastebin.com
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/HastebinDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/HastebinDark.user.css
 ==/UserStyle== */
 
