--- a/Mee6Dark.user.css
+++ b/Mee6Dark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for the Mee6 (discord bot) dashboard
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/Mee6Dark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/Mee6Dark.user.css
 ==/UserStyle== */
 
