--- a/SkribblDark.user.css
+++ b/SkribblDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for skribbl.io
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/SkribblDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/SkribblDark.user.css
 ==/UserStyle== */
 
