--- a/SlitherDark.user.css
+++ b/SlitherDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for slither.io
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/SlitherDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/SlitherDark.user.css
 ==/UserStyle== */
 
