--- a/SplixDark.user.css
+++ b/SplixDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for splix.io
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/SplixDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/SplixDark.user.css
 ==/UserStyle== */
 
