--- a/StylusDark.user.css
+++ b/StylusDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for Stylus
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/StylusDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/StylusDark.user.css
 ==/UserStyle== */
 
