--- a/ThingiverseDark.user.css
+++ b/ThingiverseDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for thingiverse.com
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/ThingiverseDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/ThingiverseDark.user.css
 ==/UserStyle== */
 
