--- a/W3SchoolsDark.user.css
+++ b/W3SchoolsDark.user.css
@@ -4,7 +4,7 @@
 @description    Night mode for W3Schools.com
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
-@homepageURL    https://github.com/Psykek66/UserCSS
+@homepageURL    https://github.com/Psykek66/UserCSS/blob/master/W3SchoolsDark.user.css
 @updateURL      https://raw.githubusercontent.com/Psykek66/UserCSS/master/W3SchoolsDark.user.css
 ==/UserStyle== */
 
