--- a/GoogleClassroomBlack.user.css
+++ b/GoogleClassroomBlack.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Google Classroom Black Theme
-@version        1.1.3
+@version        1.1.4
 @description    Night mode for https://classroom.google.com/
 @author         Psykek/PrototypeChicken
 @namespace      github.com/Psykek66/UserCSS
@@ -26,6 +26,12 @@ v1.1.2
 v1.1.3
 - Changed color of white space behind class header
 - Changed color of dropdown under class header (class headers w/ a dropdown are lighter colored when using this style)
+
+v1.1.4
+- Changed the turn in popup from white to black
+- Fixed some invisible text
+- Changed the color of the text in the textbox to make it more visible
+- Fixed the top border of the bottom part of the assignments from turning white when you minimize the assignment 
 =====/UPDATE LOG ===== */
 
 @-moz-document domain("classroom.google.com") {
@@ -242,7 +248,7 @@ input.poFWNe.zHQkBf {
     border-top: 1px solid #101010 !important;
 }
 .tLDEHd .NjE5zd {
-	color: #888;
+	color: #aaa;
 }
 .Q8U8uc .aHTZpf .asQXV {
 	color: #bbb;
@@ -258,6 +264,9 @@ input.poFWNe.zHQkBf {
 }
 .Q8U8uc .x7VMf {
     color: #aaa !important;
+}
+#\:c\.t {
+	color: #888;
 }
 
 /* View all classwork here */
@@ -481,6 +490,10 @@ a {
 .Shk6y {
 	color: #555;
 }
+.fb0g6 .Q8U8uc {
+	background-color: #050505 !important;
+	border: none !important;
+}
 
 /* other */
 
@@ -541,6 +554,11 @@ a {
 .oBSRLe {
 	border-top-color: #222 !important;
 }
+.O9YpHb {
+    border-top: .0625rem solid #222;
+    border-top-color: #222;
+}
+
 
 /* ==== Class Header ==== */
 
