--- a/V3rmillionClearsky.user.css
+++ b/V3rmillionClearsky.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           V3rmillion Clearsky
-@namespace      https://raw.githubusercontent.com/Psykek66/UserCSS/master/V3rmillionClearsky.css
+@namespace      https://github.com/Psykek66/UserCSS/blob/master/V3rmillionClearsky.user.css
 @version        1.0.0
 @description    There's a sky and clear things. Not much to say
 @author         Psykek   |   Psykek#3699
